# psfsubtraction

./: .gitignore  .travis.yml  CHANGES.rst  README.rst  ah_bootstrap.py  ez_setup.py  setup.cfg  setup.py
docs/: advanced_fitter_use.rst  conf.py  howtofitapsf.rst  index.rst  install.rst  newfitters.rst  prepare.rst  rtd-pip-requirements
psfsubtraction/: __init__.py  _astropy_init.py  conftest.py  data.py  ex.py  findbase.py  fit.py  fitregion.py  fitters.py  prepare.py  regions.py  simple_linear.py  utils.py
psfsubtraction/fitpsf/: __init__.py  findbase.py  fit.py  fitpsf.py  fitters.py  optregion.py  regions.py
psfsubtraction/fitpsf/tests/: conftest.py  test_fitpsf.py  test_fitters.py  test_optregion.py  test_regions.py
psfsubtraction/fitpsftemplates/: findbase.py  fitpsf.py  fitregion.py  fitters.py  regions.py  utils.py
psfsubtraction/fitpsftemplates/test/: conftest.py  test_fitpsf.py  test_fitregion.py  test_fitters.py  test_regions.py
psfsubtraction/prepare/: __init__.py  center.py  centering.py
psfsubtraction/test/: small_examples.py  test_fitregion.py  test_regions.py
psfsubtraction/tests/: __init__.py  conftest.py  setup_package.py  test_fitregion.py  test_regions.py
