[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = psfsubtraction
description = Fit a PSF of a bright object using templates (astropy affilited)
long_description = This is a package for fitting the PSF of a very bright object in CCD images with templates. Often, this approach allows for a better description of the PSF than the fit with an analytical model, specifically in the wings. This technique is important for planet detection in images or any other close object with a larger luminosity contrast, e.g. main-sequence companions of giant or supergiant stars.
author = MIT / Moritz Guenther
author_email = Moritz.Guenther@gmx.de
license = MIT
url = http://psfsubtraction.readthedocs.org
edit_on_github = True
github_project = hamogu/psfsubtraction

[entry_points]
# astropy-package-template-example = packagename.example_mod:main